Fixed on hover flickering

--- a/public/stylesheets/game-map/styles.css
+++ b/public/stylesheets/game-map/styles.css
@@ -28,10 +28,19 @@ body {
   width: 88.9vw;
 }
 
-.gameIcon:hover {
+.gameContainer:hover {
+  cursor: pointer;
+}
+.gameContainer:hover .gameIcon {
   filter: drop-shadow(0 0 15px #fafafaba);
   transform: scale(0.9);
   -webkit-transform: scale(0.9);
+}
+
+.gameIcon {
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
 .mapImage {
@@ -41,24 +50,15 @@ body {
   z-index: 0;
 }
 
-#pacmanImageContainer {
+.pacmanContainer {
   position: absolute;
   height: 6.79vw;
   width: 7.9vw;
-}
-.pacmanImage {
   top: 16%;
   left: 29%;
-  transform: rotate(-15deg);
-  -webkit-transform: rotate(-15deg);
 }
 
-.pacmanImage:hover {
-  transform: rotate(-15deg) scale(0.9);
-  -webkit-transform: rotate(-15deg) scale(0.9);
-}
-
-.tetrisImage {
+.tetrisContainer {
   position: absolute;
   height: 10.32vw;
   width: 12vw;
@@ -66,7 +66,7 @@ body {
   left: 22%;
 }
 
-.snakeImage {
+.snakeContainer {
   position: absolute;
   height: 9vw;
   width: 10.47vw;
@@ -74,7 +74,7 @@ body {
   left: 9.5%;
 }
 
-.rouletteImage {
+.rouletteContainer {
   position: absolute;
   height: 9vw;
   width: 8.16vw;
@@ -82,7 +82,7 @@ body {
   left: 45%;
 }
 
-.slotsImage {
+.slotsContainer {
   position: absolute;
   height: 9.8vw;
   width: 9.8vw;
@@ -90,7 +90,7 @@ body {
   left: 61%;
 }
 
-.blackjackImage {
+.blackjackContainer {
   position: absolute;
   height: 9vw;
   width: 8.16vw;
@@ -105,7 +105,7 @@ body {
   -webkit-transform: translate(-50%, -50%) scale(0.9);
 }
 
-.bankImage {
+.bankContainer {
   position: absolute;
   height: 10vw;
   width: 15vw;
